--- a/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
@@ -89,8 +89,8 @@
                             <label for="availability">Availability</label>
                             <select class="form-control" id="availability" required oninput="validateForm()" onblur="validateForm()">
                                 <option value="">Select Availability</option>
-                                <option value="Full time">Full Time</option>
-                                <option value="Part time">Part Time</option>
+                                <option value="Full Time">Full Time</option>
+                                <option value="Part Time">Part Time</option>
                             </select>
                             <span class="error-message" id="availabilityError"></span>
                         </div>
