--- a/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
@@ -48,7 +48,7 @@
                                 <button class="btn btn-danger w-100" type="submit">Login</button>
                             </form>
                             <p class="mt-3 text-center">By clicking login, you agree to our <a href="#">Terms & Conditions!</a></p>
-                            <p class="mt-3 text-center">Don't have an account? <a class="registerHere" href="~/Page/Register">Register here</a></p>
+                            <p class="mt-3 text-center">Don't have an account? <a class="registerHere" href="~/Page/ChooseRegister">Register here</a></p>
                         </div>
                     </div>
                 </div>
